SAD-19: Add missing routes to each handler.
